[workspace]
members = [
    "crates/thunderstorm",
    "crates/cli",
    "crates/util",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.33.0", features = ["full"] }
uuid = { version = "1.1.2", features = ["v4"] }
thunderstorm = { path = "crates/thunderstorm" }
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
globset = "0.4"
anyhow = "1.0.80"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2.0.9"
indicatif = "0.17.7"
flume = { version = "0.11.0", default-features = false, features = ["async", "select"] }
