[workspace]
members = [
    "crates/bit_rev",
    "crates/cli",
    "crates/util",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.33.0", features = ["full"] }
uuid = { version = "1.1.2", features = ["v4"] }
bit_rev = { path = "crates/bit_rev" }
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
globset = "0.4"
anyhow = "1.0.80"
console-subscriber = "0.2.0"
tracing = "0.1.40"
tracing-subscriber =  "0.3.18"
# tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
