[workspace]
members = [
    "crates/bit_rev",
    "crates/cli",
    "crates/util",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.33.0", features = ["full"] }
uuid = { version = "1.1.2", features = ["v4"] }
bit_rev = { path = "crates/bit_rev" }
console-subscriber = { version = "0.4.1"}
dirs = "3.0"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
globset = "0.4"
anyhow = "1.0.80"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2.0.9"
indicatif = "0.17.7"
flume = { version = "0.11.0", default-features = false, features = ["async", "select"] }
reqwest = { version = "0.11", features = ["json"] }
byteorder = "1.4.3"
serde_bencode = "0.2.3"
serde_bytes = "0.11.12"
sha1_smol = "1.0.0"
dashmap = "5.5.3"
rand = "0.8.5"
tokio-util = "0.7.10"
