[package]
name = "bit_rev"
version = "0.1.0"
edition = "2021"

[lib]
name = "bit_rev"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
tokio.workspace = true
flume.workspace = true
anyhow.workspace = true
tracing.workspace = true
thiserror.workspace = true
reqwest.workspace = true
byteorder.workspace = true 
serde_bencode.workspace = true
serde_bytes.workspace = true
sha1_smol.workspace = true
dashmap.workspace = true
rand.workspace = true
tokio-util.workspace = true
