[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cli"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"] }
serde_bencode = "0.2.3"
serde_bytes = "0.11.12"
rand = "0.8.5"
sha1_smol = "1.0.0"
flume = { version = "0.11.0", default-features = false, features = ["async", "select"] }
indicatif = "0.17.7"
thunderstorm = { workspace = true }
