[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cli"
path = "src/main.rs"

[features]
default = []
tokio-console = ["console-subscriber"]

[dependencies]
tokio.workspace = true
bit_rev.workspace = true
indicatif.workspace = true
console-subscriber = { version = "0.4.1", optional = true}
tracing.workspace = true
tracing-subscriber.workspace = true
flume.workspace = true
