[package]
name = "thunderstorm-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "thunderstorm_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.33.0", features = ["full"] }
byteorder = "1.4.3"
serde_bencode = "0.2.3"
serde_bytes = "0.11.12"
indicatif = "0.17.7"
