[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "Thunderstorm"
path = "src/main.rs"

[dependencies]
thunderstorm = { workspace = true }
uuid.workspace = true
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_macros = { git = "https://github.com/zed-industries/zed" }
serde = "1.0.197"
