[package]
name = "thunderstorm"
version = "0.1.0"
edition = "2021"

[lib]
name = "thunderstorm"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
tokio.workspace = true
reqwest = { version = "0.11", features = ["json"] }
byteorder = "1.4.3"
serde_bencode = "0.2.3"
serde_bytes = "0.11.12"
flume = { version = "0.11.0", default-features = false, features = ["async", "select"] }
sha1_smol = "1.0.0"
